adding meta headers to index.html

--- a/frontend_ecommerce/index.html
+++ b/frontend_ecommerce/index.html
@@ -2,6 +2,10 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta charset="utf-8"/>
+		<meta name="description" content="This is a frontend exercise about a form submission for Güell Consulting"/>
+		<meta name="keywords" content="e-commerce, ecommerce, güell, consulting, güellconsulting, dessign, form, frontend, backend"/>
+
 		<style>
 		html,body {
 		  /*background-color: lightgreen;*/
