--- a/frontend_ecommerce/public/index.html
+++ b/frontend_ecommerce/public/index.html
@@ -7,196 +7,9 @@
 		<meta name="keywords" content="e-commerce, ecommerce, güell, consulting, güellconsulting, dessign, form, frontend, backend"/>
 
 		<style>
-		html,body {
-		  /*background-color: lightgreen;*/
-		  height: 100%;
-		}
-
-		html, body { height: 100%; margin: 0; }
-		/*div { height: 100%; width: 100%;}*/
-
-		/*#logo a img {
-			display:block;
-			align: center; 
-			margin:auto;
-		}*/
-
-			img{
-
-				max-width: 100%;
-
-				/*max-height: 100%;*/
-
-				/*display: block; */ /* remove extra space below image */
-
-			}
-
-		@media only screen and (max-width: 600px) {
-		  body {
-			background-color: lightblue;
-		  }
-		}
-
-		#id1 {
-		height: 10%;
-		width: 100%;
-		background-color: white;
-		text-align: center;
-		}
-		#id2 {
-		height: 20%;
-		width: 100%;
-		background-color: #D3D3D3;
-		position: relative
-		}
-		#id3 {
-		height: 35%;
-		width: 100%;
-		background-color: #808080;
-		}
-		#id4 {
-		height: 100%;
-		width: 100%;
-		background-color: #D3D3D3;
-		}
-
-		#overlay {
-		  position: absolute; /* Sit on top of the page content */
-		  display: none; /* Hidden by default */
-		  width: 100%; /* Full width (cover the whole page) */
-		  height: 100%; /* Full height (cover the whole page) */
-		  top: 200;
-		  left: 400;
-		  right: 0;
-		  bottom: 0;
-		  /*background-color: rgba(0,0,0,0.5);*/ /* Black background with opacity */
-		  z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
-		  display: block;
-		}
+		
 
 
-		.container {
-		  max-width: 400px;
-		  width: 100%;
-		  margin: 0 auto;
-		  position: relative;
-		}
-
-		#contact input[type="text"],
-		#contact input[type="email"],
-		#contact input[type="tel"],
-		#contact input[type="url"],
-		#contact textarea,
-		#contact button[type="submit"] {
-		  font: 400 12px/16px "Montserrat", Helvetica, Arial, sans-serif;
-		}
-
-		#contact {
-		  background: #F9F9F9;
-		  padding: 25px;
-		  margin: 30px 0;
-		  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-		}
-
-		#contact h3 {
-		  display: block;
-		  font-size: 30px;
-		  font-weight: 300;
-		  margin-bottom: 10px;
-		}
-
-		#contact h4 {
-		  margin: 5px 0 15px;
-		  display: block;
-		  font-size: 13px;
-		  font-weight: 400;
-		}
-
-		fieldset {
-		  border: medium none !important;
-		  margin: 0 0 10px;
-		  min-width: 100%;
-		  padding: 0;
-		  width: 100%;
-		}
-
-		#contact input[type="text"],
-		#contact input[type="email"],
-		#contact input[type="tel"],
-		#contact input[type="url"],
-		#contact textarea {
-		  width: 100%;
-		  border: 1px solid #ccc;
-		  background: #FFF;
-		  margin: 0 0 5px;
-		  padding: 10px;
-		}
-
-		#contact input[type="text"]:hover,
-		#contact input[type="email"]:hover,
-		#contact input[type="tel"]:hover,
-		#contact input[type="url"]:hover,
-		#contact textarea:hover {
-		  -webkit-transition: border-color 0.3s ease-in-out;
-		  -moz-transition: border-color 0.3s ease-in-out;
-		  transition: border-color 0.3s ease-in-out;
-		  border: 1px solid #aaa;
-		}
-
-		#contact textarea {
-		  height: 100px;
-		  max-width: 100%;
-		  resize: none;
-		}
-
-		#contact button[type="submit"] {
-		  cursor: pointer;
-		  width: 100%;
-		  border: none;
-		  background: #4CAF50;
-		  color: #FFF;
-		  margin: 0 0 5px;
-		  padding: 10px;
-		  font-size: 15px;
-		}
-
-		#contact button[type="submit"]:hover {
-		  background: ##DC143C;
-		  -webkit-transition: background 0.3s ease-in-out;
-		  -moz-transition: background 0.3s ease-in-out;
-		  transition: background-color 0.3s ease-in-out;
-		}
-
-		#contact button[type="submit"]:active {
-		  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.5);
-		}
-
-		.copyright {
-		  text-align: center;
-		}
-
-		#contact input:focus,
-		#contact textarea:focus {
-		  outline: 0;
-		  border: 1px solid #aaa;
-		}
-
-		/*div.fixed {
-		  position: fixed;
-		  bottom: 500;
-		  right: 20;
-		  width: 300px;
-		  border: 3px solid #73AD21;
-		}*/
-
-		div.absolute {
-		  position: absolute;
-		  top: 60px;
-		  left: 400px;
-		  width: 300px;
-		  height: 100px;
-		  border: 3px solid #73AD21;
-		}
 
 	</style>
   
@@ -236,7 +49,7 @@
 							<div class="cls-form-right">
 								<fieldset>
 								  Observaciones *
-								  <textarea placeholder="Type your message here...." tabindex="5" required></textarea>
+								  <textarea placeholder="Escriu el teu missatge...." tabindex="5" required></textarea>
 								</fieldset>
 							</div>
 						</div>
@@ -271,6 +84,5 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 		<script src="js/custom.js"></script>
-
 	</body>
 </html>
